# Fortran-ML-Interface

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install-scorep.sh  install.sh  phydll_placement4mpmd.py  setupEnvRWTHClaix23.sh
data/: .gitignore  FHIT_32x32x32_output.h5  H2_000057_prate.h5
doc/: install.md
model/: get_channels_first_or_last.py
model/cnn2d-test/: createFlexCNN2D.py
model/cnn2d_multichannel-test/: createFlexCNN2D-multichannel.py
model/cnn3d-multichannel-test/: createFlexCNN3D-multichannel-CPUvsGPU.py  createFlexCNN3D-multichannel.py  testConvolution3D-multichannel.keras
model/cnn3d-test/: createFlexCNN3D.py
model/tsrgan/: createGenerator.py  tsrgan_3D.py
model/unet/_2D/: CNN.py  convert.py  var_train_losses.py
src/: CMakeLists.txt
src/ml_coupling/: ml_coupling.F90  ml_coupling_combustion.F90  ml_coupling_turbulence.F90
src/ml_coupling_strategy/: ml_coupling_strategy.f90
src/ml_coupling_strategy/aix/: ml_coupling_strategy_aix.f90
src/ml_coupling_strategy/phydll/: ml_coupling_strategy_phydll.F90  ml_coupling_strategy_phydll.py  ml_coupling_strategy_phydll_tsrgan.py  phydll-tmp.py
test/: CMakeLists.txt  main_cnn.f90  main_cnn_test_2D.f90  main_cnn_test_3D.f90  main_cnn_test_3D_multichannel.f90  main_tsrgan.f90
visualization/: plot_comparison_UNet.py  test_uniform_filtering.py
